--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:hint="TextView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/signin"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="450dp"
@@ -36,6 +36,18 @@
         android:background="@drawable/submit"
         android:elevation="8dp"
         android:text="Button" />
+
+    <TextView
+        android:id="@+id/signup"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:text="SIGN UP"
+        android:textColor="#00ff00"
+        android:layout_marginTop="550dp"
+        android:textAlignment="center" />
+
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -45,9 +57,6 @@
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/revuc" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 
 </RelativeLayout>
