--- a/app/src/main/res/layout/content_quiz_home.xml
+++ b/app/src/main/res/layout/content_quiz_home.xml
@@ -35,7 +35,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/Chem1" />
+            app:srcCompat="@drawable/chem1" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -43,7 +43,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/Chem1" />
+            app:srcCompat="@drawable/chem1" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -51,7 +51,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="200dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/Chem2" />
+            app:srcCompat="@drawable/chem2" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -59,7 +59,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="200dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/Chem2" />
+            app:srcCompat="@drawable/chem2" />
 
         <ImageView
             android:id="@+id/imageView7"
