--- a/app/src/main/res/layout/s_physics.xml
+++ b/app/src/main/res/layout/s_physics.xml
@@ -128,6 +128,7 @@
         android:background="@drawable/button_blue"
         android:onClick="onButtonClick"
         android:text="Back"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
