--- a/app/src/main/res/layout/activity_chem.xml
+++ b/app/src/main/res/layout/activity_chem.xml
@@ -31,7 +31,7 @@
         android:background="@drawable/shape"
         android:elevation="8dp"
         android:gravity="center"
-        android:text="Hydrogem"
+        android:text="Hydrogen"
         android:textAlignment="center"
         android:textSize="25sp" />
 
