--- a/app/src/main/res/layout/activity_chemistry.xml
+++ b/app/src/main/res/layout/activity_chemistry.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".chemistry">
 
 
@@ -98,7 +99,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Let's Take a Quiz"
-        android:textSize="24dp"
+        android:textColor="@color/colorWhite"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
