--- a/app/src/main/res/layout/study.xml
+++ b/app/src/main/res/layout/study.xml
@@ -18,6 +18,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Let's Study!"
+        android:elevation="10dp"
         android:textColor="@color/colorWhite"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_blue"
         android:elevation="58dp"
@@ -46,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Choose a topic to study"
+        android:elevation="10dp"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +63,7 @@
         android:background="@drawable/button_blue"
         android:onClick="onButtonClick"
         android:text="Physics"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -72,6 +76,7 @@
         android:background="@drawable/button_blue"
         android:onClick="onButtonClick"
         android:text="Chemistry"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phyButton" />
@@ -84,6 +89,7 @@
         android:background="@drawable/button_blue"
         android:onClick="onButtonClick"
         android:text="Biology"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chemButton" />
